--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -4,7 +4,7 @@
 
 .SearchResultsHeader {
   height: 100%;
-  font-size: 1.5em;;
+  font-size: 1.5em;
   font-weight: bold;
   line-height: 1.9em;  
   padding-left: 5px;
