Using Test array of objects in TrackList

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,14 +6,19 @@
   color: #fff;
 }
 
-.App-logo {
-  /* height: 40vmin; */
-  height: 20px;
-  pointer-events: none;
+.AppTitle {
+  font-size: 2em;
+  font-weight: bold;  
 }
 
-.App-header {
-  color: #fff;
+.poweredBy {
+  line-height: 2em;
+}
+
+.AppLogo {
+  /* height: 40vmin; */
+  height: 20px;
+  pointer-events: none;    
 }
 
 .AppInfo {
