--- a/src/components/Track/Track.css
+++ b/src/components/Track/Track.css
@@ -1,10 +1,36 @@
-.TrackInfo {
+.Track {
+  display: flex;
   height: 3.75em;  
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid white; 
+}
+
+.TrackInfo {
+  flex-grow: 1;
+
+  background-color: darkslateblue;
 }
 
 .TrackName {  
   font-size: 1.25em;
   font-weight: bold; 
   line-height: 1.5em;
+}
+
+.TrackButton {
+  color: white;
+  width: 1.5em;
+  font-size: 1.5em;
+  font-weight: 800;
+  border-radius: 0.33em;
+  margin-top: 0.4em;
+  margin-left: 0.25em;  
+  background-color: darkcyan;  
+}
+
+#AddTrack {
+  background-color: darkgreen;
+}
+
+#RemoveTrack {
+  background-color: darkred;
 }
