--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -13,7 +13,8 @@
 }
 
 .SearchButton {
-  width: 4em;
+  cursor: pointer;
+  width: 4em;  
   font-size: 1.5em;
   border-radius: 0.33em;
   margin-left: 0.25em;
