--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,12 @@
 
   text-align: center;
   color: #fff;
+
+  background-image: url('/src/Images/teal_background2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
 }
 
 .AppTitle {
@@ -22,34 +28,26 @@
 }
 
 .AppInfo {
-  display: flex;
+  display: flex;  
   justify-content: center;  
 }
 
+.AppListHeader {
+  width: 100%;
+  height: 3em;
+
+  background-color: purple;
+}
+
 .AppList {
-  background-color: magenta;
+  background-color: rgb(0, 65, 90);
   text-align: left;
   align-items: start;
   width: 400px;
-  margin: 10px;
+  height: 800px;
+  margin: 10px;  
 }
 
 .App-link {
   color: #61dafb;
-}
-
-.Background {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-  overflow: hidden;
-}
-
-#backgroundImage {
-  object-fit: cover;
-  width: 100%;
-  min-width: 100%;      
 }
