--- a/src/components/PlayList/PlayList.css
+++ b/src/components/PlayList/PlayList.css
@@ -1,7 +1,7 @@
 .PlayListHeader {
   display: flex; 
   align-items: center; 
-  height: 3em;
+  /* height: 3em; */
   
   background-color: darkorange;
 }
@@ -13,6 +13,7 @@
 }
 
 .SaveButton {    
+  cursor: pointer;
   width: 3em;
   font-size: 1.5em;
   border-radius: 0.33em;
