--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -1,8 +1,7 @@
-.SearchResultsHeader {  
-  height: 2em;
-  font-size: 1.5em;
+.SearchResultsHeader {    
+  font-size: 1.5em;  
   font-weight: bold;
   line-height: 1.9em;
 
-  background-color: darkblue;
+  /* background-color: darkblue; */
 }
