--- a/src/components/TrackList/TrackList.css
+++ b/src/components/TrackList/TrackList.css
@@ -2,5 +2,9 @@
   width: 100%;
   height: 3em;
 
-  background-color: purple;
+  /* background-color: purple; */
+}
+
+.TrackList {
+  overflow-y: scroll;  
 }
