--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -35,7 +35,10 @@
   width: 100%;
   height: 3em;
 
+  background-color: rgb(0, 43, 59);
   /* background-color: purple; */
+
+  border-bottom: 2px solid white; 
 }
 
 .AppList {
